--- a/Example5.html
+++ b/Example5.html
@@ -5,7 +5,7 @@
 	<meta  charset="utf-8" /> <!--meta Указывает каким образом текст должен
 	отражаться на экране -->
 	<title>Гостевая</title><!-- Заголовок-->
-	<link rel="stylesheet" href="mystyles4.css" /> 
+	<link rel="stylesheet" href="mystyles5.css" /> 
 	<!-- rel определяет чем является подклюаемый файл для данного документа  link используется для подключения стилей,сценариев, или значков
 		из внешних файлов -->
 </head>
@@ -24,6 +24,7 @@
 				<li> Контакты</li>
 			</ul>
 	</nav>
+	<div id="container">
 	<section id="main_section"> <!-- Основная область -->
 		<article> <!-- Дочерний элемент тега section-->
 			<header>
@@ -59,6 +60,7 @@
 		<blockquote> Статья номер 1</blockquote>
 		<blockquote> Статья номер 2</blockquote>
 	</aside>
+	</div>
 	<footer id="main_footer"> <!-- Служебная информация -->
 		<span><small>Copyright &copy ; 2018 </small></span> <!-- small мелкий шрифт курсив -->
 		<p><span>I love the movie <cite>Temptations</cite></span></p>
