--- a/Form.html
+++ b/Form.html
@@ -4,7 +4,9 @@
 	<title>Документ с формой </title>
 </head>
 <body>
-	<form action="script.cgi" method="GET">
+	<form action="Proj.exe" method="GET"> <!-- action сценарий отно
+	передает stdout серверу(который
+	еще нужно настроить) сительный путь к сценарию -->
 		Введите имя:
 		<input type="text" name="name" value="Неизвестный"><br>
 		Введите дату рождения:
